integrate m-api 3.2.3
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>